--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=tu-servidor;Database=multicloud;Username=tu-usuario;Password=tu-password;Port=5432"
+    "DefaultConnection": "Host=34.28.173.122;Database=multicloud;Username=admin;Password=admin123;Port=5432"
   },
   "Email": {
     "SmtpHost": "email-smtp.us-east-1.amazonaws.com",
-    "SmtpPort": "587",
+    "SmtpPort": "54",
     "Username": "tu-aws-ses-username",
     "Password": "tu-aws-ses-password",
     "FromAddress": "tu-correo@dominio.com"
