--- a/appsettings.json
+++ b/appsettings.json
@@ -3,11 +3,11 @@
     "DefaultConnection": "Host=34.28.173.122;Database=multicloud;Username=admin;Password=admin123;Port=5432"
   },
   "Email": {
-    "SmtpHost": "email-smtp.us-east-1.amazonaws.com",
-    "SmtpPort": "54",
-    "Username": "tu-aws-ses-username",
-    "Password": "tu-aws-ses-password",
-    "FromAddress": "tu-correo@dominio.com"
+    "SmtpHost": "email-smtp.us-east-2.amazonaws.com",
+    "SmtpPort": "587",
+    "Username": "AKIAXJXVHYJGH2DCHLEA",
+    "Password": "BMQxcPfJl8GA3tlsH+Y1a/6hZbQ2ny4h39Wh3iVoLxK2",
+    "FromAddress": "canoangel028@gmail.com"
   },
   "Twilio": {
     "AccountSid": "AC95c840523ef2ca779f8d15395e5728f1",
