--- a/appsettings.json
+++ b/appsettings.json
@@ -5,13 +5,13 @@
   "Email": {
     "SmtpHost": "email-smtp.us-east-2.amazonaws.com",
     "SmtpPort": "587",
-    "Username": "AKIAXJXVHYJGH2DCHLEA",
-    "Password": "BMQxcPfJl8GA3tlsH+Y1a/6hZbQ2ny4h39Wh3iVoLxK2",
+    "Username": "AKIAXJXVHYJGNIATJEVV",
+    "Password": "BOtxpXCYoyGvCZCg7ZV/GPgWJcROKnD5LDPYEPrBXpb0",
     "FromAddress": "canoangel028@gmail.com"
   },
   "Twilio": {
-    "AccountSid": "AC95c840523ef2ca779f8d15395e5728f1",
-    "AuthToken": "2e39887a34a514c8eeafcd9ae836e9cc",
-    "FromPhone": "+13853635962"
+    "AccountSid": "AC123d1a2044cb05c1d3b12a5cd0a2a149",
+    "AuthToken": "b6e32c95113842e2be6da2f131d75bb2",
+    "FromPhone": "+17854537920"
   }
-}
+} 
